<resources>
    <string name="registrar">Añadir tarea</string>
    <string name="editar">Mostrar tareas</string>
    <string name="salir">Salir</string>
    <string name="configuracion">Configuracion</string>
    <string name="pantallaPrincipal">Gestor de tareas</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="añadirTarea">Añadir Tarea</string>
    <string name="editarTarea">Editar Tarea</string>
    <string name="tituloTarea">El titulo de la tarea</string>
    <string name="descripcionTarea">La descripcion de la tarea</string>
    <string name="guardarTarea">Guardar tarea</string>
    <string name="GuardadoCorrectamente">Guardado correctamente</string>
    <string name="tareas">Tareas</string>
    <string name="castellano">Castellano</string>
    <string name="english">Ingles</string>
    <string name="volver">Volver</string>
    <string name="web">Info</string>
    <string name="app_name">FitFlow</string>
    <string name="fecha">Fecha</string>
    <string name="descargar">Descargar</string>
    <string name="eliminarTarea">Eliminar</string>
    <string name="oscuro">Tema Oscuro</string>
    <string name="claro">Tema Claro</string>
    <string name="inicio">Menu de Inicio</string>
    <string name="diasRegistrados">Dias Registrados</string>
    <string name="seleccionDia">Selecciona un dia:</string>
    <string name="seleccionTarea">Seleccione una Tarea para editar:</string>
    <string name="btnCamara">Camara</string>
    <string name="btnSubirFoto">Subir foto</string>
    <string name="sacarFoto">Sacar foto</string>
    <string name="btnCargarFoto">Cargar foto</string>
    <string name="verGimnasios">Mapa</string>
    <string name="gymCercanos">Gimnasios cerca</string>
    <string name="empEntrenamiento">Apuntar entrenamiento</string>
    <string name="appwidget_text">¡Mantente activo! Tu cuerpo te lo agradecerá.</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Esto es un ejemplo</string>
    <string name="appwidget_text2">Haz ejercicio, tu salud te lo agradecerá.</string>
</resources>